# bimini

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yaml
bimini-core/: Cargo.toml
bimini-core/src/: error.rs  lib.rs
bimini-core/src/aws/: mod.rs
bimini-core/src/aws/client/: aws_client.rs  credentials.rs  mod.rs  sts_client.rs
bimini-core/src/nix/: groups_iter.rs  mod.rs  signal_config.rs  spawn_directory.rs  to_env.rs  user_spec.rs
bimini-core/src/proc/: child.rs  controller.rs  mod.rs  spawn_directory.rs
bimini-core/src/vault/: mod.rs
bimini-core/src/vault/client/: mod.rs  request.rs  response.rs  settings.rs  vault_client.rs
bimini-core/src/vault/client/engine/: kv2.rs  mod.rs  pki.rs
bimini-core/src/vault/client/engine/auth/: aws_iam.rs  engine.rs  mod.rs
bimini-macros/: Cargo.toml
bimini-macros/src/: lib.rs  vault_engine.rs
src/: all_groups.rs  aws_client.rs  lib.rs  main.rs  spawn_directory.rs  user_spec.rs  vault_client.rs
src/aws/: client.rs  credentials.rs  mod.rs
src/aws_client/: aws_credentials.rs  mod.rs
src/vault/: client.rs  mod.rs
src/vault/auth/: aws.rs
src/vault/engine/: kv2.rs  mod.rs  pki.rs
src/vault_api/: mod.rs
src/vault_api/auth/: aws.rs
src/vault_api/engine/: kv2.rs  mod.rs  pki.rs
