[package]
name = "bimini"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "bimini"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
aws-sigv4 = "0.49.0"
base64 = "0.13.0"
builder-pattern = "0.4.2"
clap = { version = "4.0.15", features = ["derive", "env"] }
http = "0.2.8"
nix = "0.25.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
ureq = { version = "2.5.0", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v4"] }
