[package]
name = "bimini"
version = "0.11.1"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
bimini-core = { path = "bimini-core" }
clap = { version = "4.4.8", features = ["env", "derive", "unicode"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
